# whisper-vits-svc

./: .gitignore  pyproject.toml  run_on_save.py  svc_preprocessing.py  svc_trainer.py
configs/: base_npu.yaml
files/: train.txt  valid.txt
prepare/: preprocess_crepe.py  preprocess_hubert.py  preprocess_ppg.py  preprocess_resample.py  preprocess_speaker.py  preprocess_speaker_ave.py  preprocess_spec.py  preprocess_train.py  preprocess_zzz.py
speaker/: config.py  infer.py
speaker/models/: lstm.py  resnet.py
speaker/utils/: audio.py  coqpit.py  io.py  shared_configs.py
vits/: commons.py  data_utils.py  losses.py  models.py  modules.py  modules_grl.py  spectrogram.py  utils.py
vits_extend/: dataloader.py  train.py  validation.py
