[tool.poetry]
name = "whisper-vits-svc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.3.0"
tqdm = "^4.66.5"
numpy = "1.26.4"
torch = "2.2.0"
torchvision = "0.17.0"
torchaudio = "2.2.0"
torch-npu = "2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
