[tool.poetry]
name = "whisper-vits-svc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
omegaconf = "^2.3.0"
tqdm = "^4.66.5"
click = "^8.1.7"
loguru = "^0.7.2"
autoflake = "^2.3.1"
black = "^24.8.0"
isort = "^5.13.2"
librosa = "^0.10.2.post1"
torchcrepe = "^0.0.23"
pyworld = "^0.3.4"
tensorboard = "^2.17.0"
matplotlib = "^3.9.2"
transformers = "^4.44.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
